--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,6 +1,46 @@
-font-style: italic;
-font-size: 20px;
-color: black;
-text-align: center;
+body {
+background-color: lightblue;
+    font-style: italic;
 
-
+}
+h1 {
+    text-align: center;
+    color: navy;
+    margin-left: 20px;
+}
+.contact-box {
+    border: 2px solid black;
+    padding: 20px;
+    margin: 20px;
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 5px 5px 15px
+}
+label {
+    display: block;
+    margin-top: 10px;
+    font-weight: bold;
+}
+input, textarea {
+    width: 100%;
+    padding: 10px;
+    margin-top: 5px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
+}
+textarea {
+    height: 100px;
+}
+button {
+    background-color: rgb(0, 0, 0);
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-top: 10px;
+}
+button:hover {
+    background-color: rgb(0, 0, 0);
+}
